fixed header spacing

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -139,7 +139,6 @@
 
     span {
       margin: 10px;
-      margin-left: 0;
       padding: 1px 8px;
       border-radius: 50%;
       border: 2px solid #e8e9ed;
